feat: Add `--preinstalled` flag to build command to create preinstalled Snap bundle (#3805)
This adds a `--preinstalled` flag to the `mm-snap build` command, which
makes the CLI output a `preinstalled-snap.json` in addition to the usual
`bundle.js`.


<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> Introduces first-class support for building preinstalled Snaps.
> 
> - Adds `--preinstalled` to `mm-snap build`; plumbs through yargs,
build handler, and sandbox; `BuildOptions` extended
> - New Webpack `PreinstalledSnapsBundlePlugin` reads
`snap.manifest.json`, locales, and icon to emit
`preinstalled-snap.json`; adds `readWebpackFile` util
> - Extends `snap.config` with `preinstalled` options:
`hideSnapBranding`, `hidden`, `removable`; example preinstalled snap
updated to use the flag and config
> - Removes bespoke manifest generation script and related dev deps from
example package
> - Updates/extends tests: build (unit/e2e), webpack plugins, utils;
minor typings and fs handling adjustments
> 
> <sup>Written by [Cursor
Bugbot](https://cursor.com/dashboard?tab=bugbot) for commit
875c7283882b3fa774f6d3c346b880c6ecc95b81. This will update automatically
on new commits. Configure
[here](https://cursor.com/dashboard?tab=bugbot).</sup>
<!-- /CURSOR_SUMMARY -->

--- a/packages/examples/packages/preinstalled/package.json
+++ b/packages/examples/packages/preinstalled/package.json
@@ -23,9 +23,8 @@
     "snap.manifest.json"
   ],
   "scripts": {
-    "build": "mm-snap build && yarn build:manifest",
+    "build": "mm-snap build --preinstalled",
     "build:clean": "yarn clean && yarn build",
-    "build:manifest": "tsx scripts/generate-json.mts",
     "changelog:update": "../../../../scripts/update-changelog.sh @metamask/preinstalled-example-snap",
     "changelog:validate": "../../../../scripts/validate-changelog.sh @metamask/preinstalled-example-snap",
     "clean": "rimraf \"dist\"",
@@ -51,9 +50,7 @@
     "@lavamoat/allow-scripts": "^3.4.1",
     "@metamask/auto-changelog": "^5.0.2",
     "@metamask/snaps-cli": "workspace:^",
-    "@metamask/snaps-controllers": "workspace:^",
     "@metamask/snaps-jest": "workspace:^",
-    "@metamask/utils": "^11.9.0",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
     "@types/node": "18.14.2",
@@ -64,9 +61,7 @@
     "jest-silent-reporter": "^0.6.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
-    "tsx": "^4.20.3",
-    "typescript": "~5.3.3",
-    "yocto-spinner": "^0.1.0"
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": "^20 || >=22"
