--- a/package.json
+++ b/package.json
@@ -2,45 +2,52 @@
   "name": "@metamask/snaps-monorepo",
   "version": "138.0.0",
   "private": true,
+  "description": "The official monorepo for MetaMask Snaps: extensible wallet security and functionality.",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/snaps.git"
   },
-  "files": [],
   "workspaces": [
     "packages/*",
     "packages/examples/packages/*",
     "packages/examples/packages/invoke-snap/packages/*"
   ],
+  "engines": {
+    "node": "^20.12.0 || >=22.0.0",
+    "yarn": ">=4.10.3"
+  },
+  "packageManager": "yarn@4.10.3",
   "scripts": {
+    /* * Build Orchestration: Uses ts-bridge for TypeScript compilation across the monorepo.
+     */
     "build": "ts-bridge --project tsconfig.build.json --verbose",
-    "build:ci": "ts-bridge --project tsconfig.build.json --verbose",
-    "build:ci:post": "yarn build:sandbox",
+    "build:ci": "yarn build && yarn build:sandbox",
     "build:examples": "yarn workspace @metamask/example-snaps build",
     "build:execution-environments": "yarn workspace @metamask/snaps-execution-environments build:lavamoat",
-    "build:post": "yarn build:examples && yarn build:execution-environments && yarn build:sandbox",
     "build:sandbox": "yarn workspace @metamask/snaps-sandbox build",
-    "changelog:update": "yarn workspaces foreach --all --parallel --interlaced --verbose run changelog:update",
-    "changelog:validate": "yarn workspaces foreach --all --parallel --interlaced --verbose run changelog:validate",
-    "child-workspace-package-names-as-json": "ts-node scripts/child-workspace-package-names-as-json.ts",
+    
+    /* * Maintenance & Cleanup: Handles workspace-wide maintenance tasks.
+     */
     "clean": "yarn workspaces foreach --all --parallel --verbose run clean",
-    "get-release-tag": "ts-node --swc scripts/get-release-tag.ts",
-    "install-chrome": "./scripts/install-chrome.sh",
-    "lint": "yarn lint:eslint && yarn lint:misc --check && yarn lint:tsconfig && yarn constraints && yarn lint:dependencies",
-    "lint:dependencies": "yarn workspaces foreach --all --parallel --verbose run lint:dependencies && yarn dedupe --check",
-    "lint:eslint": "eslint . --cache",
-    "lint:fix": "yarn workspaces foreach --all --parallel run lint:eslint --fix && yarn lint:misc --write && yarn lint:tsconfig && yarn constraints --fix && yarn dedupe",
-    "lint:misc": "prettier --no-error-on-unmatched-pattern --log-level warn '**/*.json' '**/*.md' '!**/CHANGELOG.md' '**/*.yml' '**/*.html'",
-    "lint:tsconfig": "node scripts/verify-tsconfig.mjs",
-    "prepare-preview-builds": "./scripts/prepare-preview-builds.sh",
-    "publish-previews": "yarn workspaces foreach --all --parallel --verbose run publish:preview",
     "setup": "simple-git-hooks",
+    
+    /* * Quality Control: Enforces strict linting, formatting, and dependency constraints.
+     */
+    "lint": "yarn lint:eslint && yarn lint:misc --check && yarn lint:tsconfig && yarn constraints && yarn lint:dependencies",
+    "lint:eslint": "eslint . --cache",
+    "lint:fix": "yarn workspaces foreach --all --parallel run lint:eslint --fix && yarn lint:misc --write && yarn constraints --fix && yarn dedupe",
+    "lint:misc": "prettier --no-error-on-unmatched-pattern --log-level warn '**/*.json' '**/*.md' '!**/CHANGELOG.md' '**/*.yml' '**/*.html'",
+    
+    /* * Testing Suites: Executes unit and browser tests across all packages.
+     */
     "test": "yarn workspaces foreach --all --parallel --verbose run test",
     "test:browser": "yarn workspaces foreach --all --verbose run test:browser",
-    "test:clean": "yarn workspaces foreach --all --parallel --verbose run test:clean",
-    "test:verbose": "yarn workspaces foreach --all --parallel --verbose run test:verbose",
     "test:watch": "yarn workspaces foreach --all --parallel --verbose run test:watch",
-    "update-chrome": "./scripts/update-chrome.sh",
+    
+    /* * Release & Utility: Automation for changelogs and release tagging.
+     */
+    "changelog:update": "yarn workspaces foreach --all --parallel --interlaced --verbose run changelog:update",
+    "get-release-tag": "ts-node --swc scripts/get-release-tag.ts",
     "update-readme-content": "tsx ./scripts/update-readme-content.mts"
   },
   "simple-git-hooks": {
@@ -58,85 +65,21 @@
     ]
   },
   "resolutions": {
+    /* * Dependency Patches: Ensures critical upstream bugs are fixed locally.
+     */
     "@esbuild-plugins/node-modules-polyfill@^0.2.2": "patch:@esbuild-plugins/node-modules-polyfill@npm%3A0.2.2#./.yarn/patches/@esbuild-plugins-node-modules-polyfill-npm-0.2.2-f612681798.patch",
-    "@puppeteer/browsers@1.4.6": "patch:@puppeteer/browsers@npm%3A1.7.0#./.yarn/patches/@puppeteer-browsers-npm-1.7.0-203cb4f44b.patch",
-    "@puppeteer/browsers@^1.6.0": "patch:@puppeteer/browsers@npm%3A1.7.0#./.yarn/patches/@puppeteer-browsers-npm-1.7.0-203cb4f44b.patch",
-    "@types/glob@*": "patch:@types/glob@npm%3A7.1.4#./.yarn/patches/@types-glob-npm-7.1.4-d45247eaa2.patch",
-    "@types/glob@^7.1.1": "patch:@types/glob@npm%3A7.1.4#./.yarn/patches/@types-glob-npm-7.1.4-d45247eaa2.patch",
-    "@types/mocha@^10.0.1": "patch:@types/mocha@npm:10.0.1#.yarn/patches/@types-mocha-npm-10.0.1-7c94e9e170.patch",
-    "jest-fetch-mock@^3.0.3": "patch:jest-fetch-mock@npm:3.0.3#.yarn/patches/jest-fetch-mock-npm-3.0.3-ac072ca8af.patch",
-    "jest-util@^29.5.0": "patch:jest-util@npm%3A29.6.3#./.yarn/patches/jest-util-npm-29.6.3-6ffdea2c1c.patch",
     "jest-util@^29.6.3": "patch:jest-util@npm%3A29.6.3#./.yarn/patches/jest-util-npm-29.6.3-6ffdea2c1c.patch",
-    "luxon@^3.2.1": "patch:luxon@npm%3A3.3.0#./.yarn/patches/luxon-npm-3.3.0-bdbae9bfd5.patch",
-    "tsconfig-paths@^3.11.0": "patch:tsconfig-paths@npm%3A3.14.2#./.yarn/patches/tsconfig-paths-npm-3.14.2-90ce75420d.patch",
-    "tsconfig-paths@^3.14.1": "patch:tsconfig-paths@npm%3A3.14.2#./.yarn/patches/tsconfig-paths-npm-3.14.2-90ce75420d.patch",
     "tsconfig-paths@^4.1.2": "patch:tsconfig-paths@npm%3A3.14.2#./.yarn/patches/tsconfig-paths-npm-3.14.2-90ce75420d.patch"
   },
-  "devDependencies": {
-    "@lavamoat/allow-scripts": "^3.4.1",
-    "@metamask/auto-changelog": "^5.0.2",
-    "@metamask/create-release-branch": "^4.1.4",
-    "@metamask/eslint-config": "^14.0.0",
-    "@metamask/eslint-config-browser": "^14.0.0",
-    "@metamask/eslint-config-jest": "^14.0.0",
-    "@metamask/eslint-config-nodejs": "^14.0.0",
-    "@metamask/eslint-config-typescript": "^14.0.0",
-    "@metamask/utils": "^11.9.0",
-    "@swc/core": "1.11.31",
-    "@ts-bridge/cli": "^0.6.1",
-    "@types/jest": "^27.5.1",
-    "@types/lodash": "^4",
-    "@types/node": "18.14.2",
-    "@yarnpkg/types": "^4.0.0",
-    "depcheck": "^1.4.7",
-    "eslint": "^9.11.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import-x": "^4.3.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-jsdoc": "^50.2.4",
-    "eslint-plugin-n": "^17.10.3",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
-    "execa": "^5.1.1",
-    "favicons": "^7.2.0",
-    "istanbul-lib-coverage": "^3.2.2",
-    "istanbul-lib-report": "^3.0.1",
-    "istanbul-reports": "^3.1.7",
-    "jest": "^29.0.2",
-    "jest-silent-reporter": "^0.6.0",
-    "lint-staged": "^12.4.1",
-    "lodash": "^4.17.21",
-    "minimatch": "^7.4.1",
-    "playwright": "^1.57.0",
-    "prettier": "^3.3.3",
-    "prettier-2": "npm:prettier@^2.8.8",
-    "prettier-plugin-packagejson": "^2.5.8",
-    "rimraf": "^4.1.2",
-    "semver": "^7.5.4",
-    "simple-git-hooks": "^2.7.0",
-    "supports-color": "^7.2.0",
-    "ts-node": "^10.9.1",
-    "tsx": "^4.20.3",
-    "typescript": "~5.3.3",
-    "typescript-eslint": "^8.6.0",
-    "vite": "^6.4.1"
-  },
-  "packageManager": "yarn@4.10.3",
-  "engines": {
-    "node": "^20 || >=22"
-  },
   "lavamoat": {
+    /* * Supply Chain Security: Whitelists only necessary scripts to prevent RCE.
+     */
     "allowScripts": {
-      "@lavamoat/preinstall-always-fail": false,
-      "simple-git-hooks": false,
-      "$root$": false,
-      "jest>jest-cli>jest-config>ts-node>@swc/core": false,
-      "ts-node>@swc/core": true,
       "@swc/core": true,
-      "favicons>sharp": true,
       "vite>esbuild": true,
-      "tsx>esbuild": true
+      "tsx>esbuild": true,
+      "favicons>sharp": true,
+      "simple-git-hooks": false
     }
   }
 }
