--- a/packages/examples/packages/client-status/package.json
+++ b/packages/examples/packages/client-status/package.json
@@ -42,15 +42,13 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "@metamask/snaps-sdk": "workspace:^"
-  },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@lavamoat/allow-scripts": "^3.4.2",
     "@metamask/auto-changelog": "^5.0.2",
     "@metamask/snaps-cli": "workspace:^",
     "@metamask/snaps-jest": "workspace:^",
+    "@metamask/snaps-sdk": "workspace:^",
     "@metamask/snaps-utils": "workspace:^",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
