--- a/packages/examples/packages/ethers-js/package.json
+++ b/packages/examples/packages/ethers-js/package.json
@@ -42,22 +42,20 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "@metamask/snaps-sdk": "workspace:^",
-    "ethers": "^6.16.0"
-  },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@lavamoat/allow-scripts": "^3.4.2",
     "@metamask/auto-changelog": "^5.0.2",
     "@metamask/snaps-cli": "workspace:^",
     "@metamask/snaps-jest": "workspace:^",
+    "@metamask/snaps-sdk": "workspace:^",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
     "@types/node": "18.14.2",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
     "eslint": "^9.11.0",
+    "ethers": "^6.16.0",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
     "prettier": "^3.3.3",
