--- a/packages/examples/packages/images/package.json
+++ b/packages/examples/packages/images/package.json
@@ -42,16 +42,13 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "@metamask/snaps-sdk": "workspace:^",
-    "uqr": "^0.1.2"
-  },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@lavamoat/allow-scripts": "^3.4.2",
     "@metamask/auto-changelog": "^5.0.2",
     "@metamask/snaps-cli": "workspace:^",
     "@metamask/snaps-jest": "workspace:^",
+    "@metamask/snaps-sdk": "workspace:^",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
     "@types/node": "18.14.2",
@@ -62,7 +59,8 @@
     "jest-silent-reporter": "^0.6.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "uqr": "^0.1.2"
   },
   "engines": {
     "node": "^20 || >=22"
