--- a/packages/examples/packages/invoke-snap/packages/consumer-signer/package.json
+++ b/packages/examples/packages/invoke-snap/packages/consumer-signer/package.json
@@ -42,18 +42,16 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "@metamask/key-tree": "^10.1.1",
-    "@metamask/snaps-sdk": "workspace:^",
-    "@metamask/utils": "^11.9.0",
-    "@noble/hashes": "^1.7.1"
-  },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@lavamoat/allow-scripts": "^3.4.2",
     "@metamask/auto-changelog": "^5.0.2",
+    "@metamask/key-tree": "^10.1.1",
     "@metamask/snaps-cli": "workspace:^",
     "@metamask/snaps-jest": "workspace:^",
+    "@metamask/snaps-sdk": "workspace:^",
+    "@metamask/utils": "^11.9.0",
+    "@noble/hashes": "^1.7.1",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
     "@types/node": "18.14.2",
