--- a/packages/examples/packages/send-flow/package.json
+++ b/packages/examples/packages/send-flow/package.json
@@ -42,17 +42,15 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "@metamask/rpc-errors": "^7.0.3",
-    "@metamask/snaps-sdk": "workspace:^",
-    "@metamask/utils": "^11.9.0"
-  },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@lavamoat/allow-scripts": "^3.4.2",
     "@metamask/auto-changelog": "^5.0.2",
+    "@metamask/rpc-errors": "^7.0.3",
     "@metamask/snaps-cli": "workspace:^",
     "@metamask/snaps-jest": "workspace:^",
+    "@metamask/snaps-sdk": "workspace:^",
+    "@metamask/utils": "^11.9.0",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
     "@types/node": "18.14.2",
