--- a/packages/snaps-sdk/package.json
+++ b/packages/snaps-sdk/package.json
@@ -74,6 +74,7 @@
   ],
   "scripts": {
     "build": "ts-bridge --project tsconfig.build.json --verbose --clean --no-references",
+    "build:docs": "typedoc",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/snaps-sdk",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/snaps-sdk",
     "lint": "yarn lint:eslint && yarn lint:misc --check && yarn changelog:validate && yarn lint:dependencies",
@@ -114,6 +115,8 @@
     "jest-silent-reporter": "^0.6.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.1",
+    "typedoc": "^0.28.16",
+    "typedoc-theme-fresh": "^0.2.3",
     "typescript": "~5.3.3"
   },
   "engines": {
