chore: Allow LavaMoat packages in age gate

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -30,3 +30,6 @@ npmPreapprovedPackages:
   - '@metamask/*'
   - '@metamask-previews/*'
   - '@lavamoat/*'
+  - 'lavamoat'
+  - 'lavamoat-core'
+  - 'lavamoat-tofu'
