--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -92,6 +92,18 @@ jobs:
             exit 1
           fi
 
+  build-schema:
+    name: Build JSON-RPC schema
+    runs-on: ubuntu-latest
+    needs: prepare
+    steps:
+      - name: Checkout and setup environment
+        uses: MetaMask/action-checkout-and-setup@v2
+        with:
+          is-high-risk-environment: false
+      - name: Build JSON-RPC schema
+        run: yarn workspace @metamask/snaps-rpc-methods build:schema
+
   policy:
     name: Generate LavaMoat policy
     runs-on: ubuntu-latest
